// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render with O duration 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <strong
    class="c1 c2"
  >
    Aucun préavis
  </strong>
  <p>
    Le code du travail et la convention collective ne prévoient pas de préavis.
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      L’existence ou la durée du préavis de licenciement peut être prévue, par la loi pour certains cas particuliers, par un accord d’entreprise ou à défaut par un usage dans l’entreprise.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  <ul>
    <li>
      Durée légale:
       
      Aucun préavis.
    </li>
    <li>
      Durée conventionnelle:
       
      Aucun préavis.
    </li>
  </ul>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        Moins de 6 mois
      </strong>
    </li>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      Catégorie professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
    <li>
      Ancienneté selon la convention collective
       : 
      <strong>
        Moins de 1 mois
      </strong>
    </li>
    <li>
      Convention collective
       : 
      <strong>
        Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label="Article L.1234-1 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901112&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l.1234-1 du code du travail"
      >
        Article L.1234-1 du code du travail
      </a>
    </li>
    <li>
      <a
        aria-label="Annexe II, article 13 (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=9D32D1AB24BC5ACF016410CDFEE667F3.tplgfr24s_3?idArticle=KALIARTI000005849509&cidTexte=KALITEXT000005678903&dateTexte=29990101&categorieLien=id"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’annexe ii, article 13"
      >
        Annexe II, article 13
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with both CC duration and CDT duration 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à 
    <strong
      class="c1 c2"
    >
      1 mois
    </strong>
    .
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
      <br />
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/16-transports-routiers-et-activites-auxiliaires-du-transport"
      >
        votre convention collective
      </a>
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  <ul>
    <li>
      Durée légale:
       
      <strong>
        1 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été traitée par nos services.
    </li>
  </ul>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        6 mois à moins de 2 ans
      </strong>
    </li>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with only CC duration 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <strong
    class="c1 c2"
  >
    Aucun préavis
  </strong>
  <p>
    Le code du travail ne prévoit pas de durée de préavis de licenciement sauf, cas particuliers.
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      L’existence et la durée du préavis de licenciement peuvent être prévues dans la convention collective, un accord d’entreprise ou à défaut par un usage dans l’entreprise.
      <br />
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/16-transports-routiers-et-activites-auxiliaires-du-transport"
      >
        votre convention collective
      </a>
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  <ul>
    <li>
      Durée légale:
       
      Aucun préavis.
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été traitée par nos services.
    </li>
  </ul>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        Moins de 6 mois
      </strong>
    </li>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when no CC 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à 
    <strong
      class="c1 c2"
    >
      2 mois
    </strong>
    .
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <ul>
    <li>
      Durée légale:
       
      <strong>
        2 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été renseignée.
    </li>
  </ul>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        Plus de 2 ans
      </strong>
    </li>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when unhandled CC 1`] = `
.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media print {
  .c3 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à 
    <strong
      class="c1 c2"
    >
      2 mois
    </strong>
    .
  </p>
  <div
    class="c3"
  >
    <div
      class="c4"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages.
      <br />
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/1561-cordonnerie-multiservice"
      >
        votre convention collective
      </a>
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  <ul>
    <li>
      Durée légale:
       
      <strong>
        2 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été traitée par nos services.
    </li>
  </ul>
  Éléments saisis :
  <br />
  <ul>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        Plus de 2 ans
      </strong>
    </li>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
  </ul>
</div>
`;
